--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,16 @@
 
 server.servlet.context-path=/mortage
 
+#DataSource
+spring.datasource.url=jdbc:mysql://localhost:3306/hackmortage
+spring.datasource.username=root
+spring.datasource.password=root
+
+#Hibernate properties
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
+
+#Hibernate ddl auto
+spring.jpa.hibernate.ddl-auto=none
 
 
 sonar.host.url=http://localhost:9000
